--- a/woosh-photo-app/LoginViewController.xib
+++ b/woosh-photo-app/LoginViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController">
             <connections>
+                <outlet property="navigationBar" destination="Dvl-IB-vlM" id="qEL-Ze-OUI"/>
                 <outlet property="passwordField" destination="45" id="70"/>
                 <outlet property="usernameField" destination="36" id="69"/>
                 <outlet property="view" destination="1" id="3"/>
@@ -53,20 +54,19 @@
                         <action selector="signupTapped:" destination="-1" eventType="touchUpInside" id="71"/>
                     </connections>
                 </button>
-                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="72">
+                <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dvl-IB-vlM">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <items>
-                        <barButtonItem width="115" style="plain" systemItem="fixedSpace" id="82"/>
-                        <barButtonItem title="Woosh" style="plain" id="81"/>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="83"/>
-                        <barButtonItem title="Log In" id="4Yq-Y8-aTs">
-                            <connections>
-                                <action selector="loginTapped:" destination="-1" id="f2Q-j2-xg1"/>
-                            </connections>
-                        </barButtonItem>
+                        <navigationItem title="Woosh" id="rYg-Bb-LAM">
+                            <barButtonItem key="rightBarButtonItem" title="Log In" id="ORK-xr-v5a">
+                                <connections>
+                                    <action selector="loginTapped:" destination="-1" id="jcP-gT-uWE"/>
+                                </connections>
+                            </barButtonItem>
+                        </navigationItem>
                     </items>
-                </toolbar>
+                </navigationBar>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
@@ -85,9 +85,6 @@
                 <constraint firstAttribute="bottom" secondItem="60" secondAttribute="bottom" constant="20" id="63"/>
                 <constraint firstAttribute="trailing" secondItem="60" secondAttribute="trailing" constant="20" symbolic="YES" id="64"/>
                 <constraint firstItem="60" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" symbolic="YES" id="66"/>
-                <constraint firstItem="72" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="75"/>
-                <constraint firstItem="72" firstAttribute="top" secondItem="1" secondAttribute="top" id="76"/>
-                <constraint firstItem="72" firstAttribute="trailing" secondItem="1" secondAttribute="trailing" id="77"/>
                 <constraint firstItem="36" firstAttribute="top" secondItem="1" secondAttribute="top" constant="96" id="84"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
