--- a/woosh-photo-app/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/woosh-photo-app/en.lproj/MainStoryboard_iPhone.storyboard
@@ -24,9 +24,13 @@
                                     <navigationItem title="Woosh" id="Kpm-dS-bfL"/>
                                 </items>
                             </navigationBar>
-                            <imageView contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IvD-Nt-aNt">
-                                <rect key="frame" x="0.0" y="44" width="320" height="472"/>
+                            <imageView contentMode="scaleAspectFit" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IvD-Nt-aNt">
+                                <rect key="frame" x="0.0" y="44" width="320" height="390"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="390" id="7Xj-xK-yXc"/>
+                                    <constraint firstAttribute="width" constant="320" id="GzH-Oc-7mc"/>
+                                </constraints>
                             </imageView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="bvk-1Q-CZQ">
                                 <rect key="frame" x="142" y="265" width="37" height="37"/>
